[package]
name = "nlsd-py"
version = "0.1.2"
authors = ["Julian Popescu <jpopesculian@gmail.com>"]
edition = "2018"

[lib]
name = "nlsd"
crate-type = ["cdylib"]

[dependencies]
nlsd = "=0.1.2"
serde-transcode = "1.1.0"
serde-pickle = "0.6.1"

[dependencies.cpython]
version = "0.5.1"
features = ["extension-module"]
